# worktree

./: .env  .gitignore  CLAUDE.md  manage.py  pyproject.toml
backend/: db.sqlite3
backend/apps/companies/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/companies/migrations/: 0001_initial.py
backend/apps/core/email/: __init__.py  exceptions.py  service.py  types.py
backend/apps/core/templates/email/base/: base.html  base.txt
backend/apps/core/templates/email/components/: button.html
backend/apps/core/templates/email/test/: hello.html  hello.txt
backend/apps/issues/: apps.py
backend/apps/projects/: apps.py
backend/apps/users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_add_email_verification_fields.py  0003_add_is_onboarded_field.py  0004_set_existing_verified_users_onboarded.py
backend/apps/users/templates/email/auth/: password_reset.html  password_reset.txt  verify_email.html  verify_email.txt
backend/config/: asgi.py  settings.py  urls.py  views.py  wsgi.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: Dashboard.jsx  ForgotPassword.jsx  Login.jsx  Onboarding.jsx  Register.jsx  ResetPassword.jsx  VerifyEmail.jsx
frontend/src/services/: api.js
